<resources>
    <string name="app_name">Pop The Balloon</string>
    <string name="level_label">Level :\u0020\u0020\u0020</string>
    <string name="score_label">Score :\u0020\u0020\u0020</string>
    <string name="max_number">9</string>
    <string name="popping_pin">Popping Pin</string>
    <string name="Start_Level">Start Level %d</string>
    <string name="Finish_Level">Completed Level %d</string>
    <string name="Stop_Game">Stop Game</string>
    <string name="Start_Game">Start Game</string>
    <string name="game_over">Game Over</string>
    <string name="your_score">Your Score :</string>
    <string name="finish">Finished</string>
    <string name="enter_name">Enter a Name</string>
    <string name="n_a">N/A</string>
    <string name="enterYourName">Please Enter Your Name</string>
    <string name="headLine">POP THE BALLOON</string>
    <string name="MUb1">Start Game</string>
    <string name="MUb2">High Score</string>
    <string name="MUb3">How To Play</string>
    <string name="MUb4">About</string>
    <string name="MUb5">Exit</string>
    <string name="Return">Return</string>
    <string name="Score">Score</string>
    <string name="Name">Name</string>
    <string name="highest_score">Highest Score</string>
    <string name="how_to_play">How To Play</string>
    <string name="howto1">1. Pop the balloon by touching it</string>
    <string name="howto2">2. Every time you level up, the balloons will be faster than before</string>
    <string name="howto3">3. Each balloon that passes, the needle will decrease by one</string>
    <string name="howto4">4. The needle runs out, then game over</string>
    <string name="about">About</string>
    <string name="level">Level :</string>
    <string name="description">Pop The Balloon is a balloon popping game
         its very easy and fun. </string>
    <string name="level_1">LEVEL 1</string>
    <string name="level_2">LEVEL 2</string>
    <string name="select_level">Select Level</string>
    <string name="level_3">LEVEL 3</string>
    <string name="level_4">LEVEL 4</string>
    <string name="level_5">LEVEL 5</string>
    <string name="start">Start</string>
    <string name="language">Choose Language</string>
    <string name="before_quiting">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No, I will stay</string>
    <string name="BalloonPopped">Balloon Popped!</string>
</resources>