<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:id="@+id/main_menu"
    android:background="@drawable/our_bg_mainmenu_clouds">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="2dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/headLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/headLine"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/startGame_btn1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/roundedbutton"
            android:onClick="menuStart"
            android:text="@string/MUb1"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">


            <Button
                android:id="@+id/score_btn2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/roundedbutton"
                android:onClick="menuLeaderBord"
                android:text="@string/MUb2"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/howto_btn3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundedbutton"
                android:onClick="menuHowToPlay"
                android:text="@string/MUb3"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/about_btn4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundedbutton"
                android:onClick="menuAbout"
                android:text="@string/MUb4"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/exit_btn5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/roundedbutton"
                android:onClick="menuExit"
                android:text="@string/MUb5"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </TableLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutSelectLevel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dialog_level"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/roundedbutton"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:text="@string/select_level"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold" />

            <NumberPicker
                android:id="@+id/numberpicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:theme="@style/numberpicker" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/startLevel_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/roundedbutton"
                    android:onClick="StartBtn"
                    android:text="@string/start"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/returnLevel_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/roundedbutton"
                    android:onClick="returnLevelBtn"
                    android:text="@string/Return"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="137dp"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="256dp"
        android:layoutDirection="ltr"
        android:orientation="horizontal">

        <Button
            android:id="@+id/changeLang"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/translate2"
            android:minHeight="48dp"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/soundbtn"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_conversion_absoluteHeight="43dp"
            tools:layout_conversion_absoluteWidth="43dp" />

        <Button
            android:id="@+id/soundbtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/speaker"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_conversion_absoluteHeight="45dp"
            tools:layout_conversion_absoluteWidth="45dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>